Adding install prompt

--- a/src/pico.scss
+++ b/src/pico.scss
@@ -100,3 +100,11 @@ summary[role="button"] {
     white-space: nowrap;
   }
 }
+
+.install-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: sticky;
+  bottom: 0;
+}
